--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/multer": "^1.4.7",
     "apollo-server-express": "^2.25.3",
+    "aws-sdk": "^2.1048.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "graphql": "^15.8.0",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
