--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/multer": "^1.4.7",
     "apollo-server-express": "^2.25.3",
     "aws-sdk": "^2.1048.0",
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
