--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.2.4",
     "@nestjs/typeorm": "^8.0.2",
+    "@nestjs/websockets": "^8.2.4",
     "@types/multer": "^1.4.7",
     "apollo-server-express": "^2.25.3",
     "aws-sdk": "^2.1048.0",
